Removed all use of preview features in JVM 21, so it works in a common LTS version